feat: add CloudBase deployment package APIs
